Added requested features for hardware and frontend
